test/qp/bad/nonlinear0.qp
-- This test should fail, because a qubit created at top-level is not released.
let q = unbox g_init0 () ;;

